--- a/README
+++ b/README
@@ -7,4 +7,4 @@ information about the user agent.
 COPYRIGHT
 =========
 
-Copyright (c) 2009 Five Points Solutions, Inc. See LICENSE for details.
+Copyright (c) 2009-2011 Five Points Solutions, Inc. See LICENSE for details.
